objects/Account_MLS__c.object
<CustomObject>
    <fields>
        <fullName>Account_Live_Date__c</fullName>
        <formula>Account__r.Live_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Connection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Connection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MLS_Worksheet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MLS Worksheet</label>
        <referenceTo>Worksheets__c</referenceTo>
        <relationshipLabel>Account MLS's</relationshipLabel>
        <relationshipName>Account_MLS_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MLS_Datasource__c</fullName>
        <description>Pulls the current Picklist Value from the MLS Object for the Data Source Field.</description>
        <formula>TEXT( MLS__r.DataSource__c )</formula>
        <label>MLS Datasource</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLS__c</fullName>
        <label>MLS</label>
        <referenceTo>MLS__c</referenceTo>
        <relationshipLabel>Account MLS's</relationshipLabel>
        <relationshipName>Account_MLS_s</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account MLS's</relationshipLabel>
        <relationshipName>Account_MLS_s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Account MLS</label>
    <nameField>
        <displayFormat>AM-{0}</displayFormat>
        <label>Account MLS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account MLS'</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>Account_MLS</fullName>
        <active>true</active>
        <label>Account MLS</label>
    </recordTypes>
</CustomObject>